@@ -1,3 +1,8 @@
+Sun Jul 25 20:34:35 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>
+
+	* gnubg.c (Convert): Suppress compiler warnings. Synch with
+	iconv() prototype.
+
 Sun Jul 25 19:19:41 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>
 
 	* rollout.h: Suppress compiler warnings; static declaration for
